# atlas_rag_system

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  Dockerfile.backend  Dockerfile.dashboard  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py  exceptions.py  logging.py
app/db/: engine.py  init_db.py  models.py  repository.py
app/evaluator/: dashboard.py  evaluator.py  metrics.py
app/evaluator/data/: test_dataset.json  test_dataset_sprintstep_mini.json
app/frontend/: api_client.py  app.py  config.py
app/frontend/components/: chat.py  health.py  ingest.py  search.py  upload.py
app/models/: schemas.py
app/services/: chunking.py  embeddings.py  embeddings_service.py  llm_service.py  parsers.py  rag_service.py  upload_service.py  validators.py
app/services/embeddings/: factory.py  provider.py  voyage_provider.py
docs/: development_log.md
scripts/: run_evaluation.py  test_llm.py
scripts/dev/: test_llm.py  test_query.py  test_search.py
scripts/ops/: upload_files.py  verify_deployment.py  warmup_services.py
test_data/sprint_step/: SprintStep_RAG_Product_Knowledge_Base.md  blog_posts_collection.txt  help_center_articles.txt  internal_logistics_protocol.txt  marketing_faq.txt  promotions_coupons_policy.txt  return_policy_v1.8_DEPRECATED.txt  return_policy_v2.1_CURRENT.txt  returns_shipping.txt  shipping_carrier_agreement_USPS.txt  store_credit_policy.txt  terms_and_conditions.txt  vendor_supply_agreement.txt
tests/: test_chunker.py
(+4 files in other folders)
