[project]
name = "atlas-rag-system"
version = "0.1.0"
description = "Develpment of my own RAG System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "colorlog>=6.10.1",
    "fastapi>=0.135.3",
    "numpy>=2.4.4",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "voyageai>=0.3.7",
]
