[project]
name = "atlas-rag-system"
version = "0.1.0"
description = "Develpment of my own RAG System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "colorlog>=6.10.1",
    "fastapi>=0.135.3",
    "gradio>=6.14.0",
    "langchain>=1.2.17",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "pgvector>=0.4.2",
    "plotly>=6.7.0",
    "psycopg[binary]>=3.3.3",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "uvicorn>=0.44.0",
    "voyageai>=0.3.7",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pytest>=9.0.3",
]
